--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -300,20 +300,25 @@ html {
   font-family: sans-serif;
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  margin: 0;
+  height: 100%; }
 
 article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
   display: block; }
 
 body {
   margin: 0;
+  height: 100%;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 0.88rem;
   font-weight: 400;
   line-height: 1.5;
   color: #495057;
   text-align: left;
-  background-color: #fff; }
+  background-color: #fff;
+  
+}
 
 [tabindex="-1"]:focus {
   outline: 0 !important; }
