--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -212,8 +212,11 @@
     background: -o-linear-gradient(-45deg, rgba(73,155,234,1) 0%, rgba(13,54,99,1) 100%);
     background: -ms-linear-gradient(-45deg, rgba(73,155,234,1) 0%, rgba(13,54,99,1) 100%);
     background: linear-gradient(135deg, rgba(73,155,234,1) 0%, rgba(13,54,99,1) 100%);
-    position: fixed;
-    width: 100%;
+    background-size: cover;
+    min-height: 100%;
+}
+
+#root{
     height: 100%;
 }
 
