--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -880,3 +880,154 @@
     overflow: scroll;
     text-align: justify;
 }
+
+/****CheckBox Gestão******/
+.check-gestao {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+span.switcher {
+    position: relative;
+    width: 180px;
+    height: 55px;
+    border-radius: 25px;
+}
+span.switcher input {
+    appearance: none;
+    position: relative;
+    width: 180px;
+    height: 48px;
+    border-radius: 25px;
+    background-color: #1e1e1e;
+    outline: none;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+span.switcher input:before, span.switcher input:after {
+    z-index: 2;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    color: #fff;
+}
+span.switcher input:before {
+    content: 'Ativa';
+    left: 20px;
+}
+span.switcher input:after {
+    content: 'Passiva';
+    right: 20px;
+}
+span.switcher label {
+    z-index: 1;
+    position: absolute;
+    top: 10px;
+    bottom: 10px;
+    border-radius: 20px;
+}
+span.switcher.switcher-1 input {
+    transition: 0.25s -0.1s;
+}
+span.switcher.switcher-1 input:checked {
+    background-color: #fff;
+}
+span.switcher.switcher-1 input:checked:before {
+    color: #fff;
+    transition: color 0.5s 0.2s;
+}
+span.switcher.switcher-1 input:checked:after {
+    color: #ccc;
+    transition: color 0.5s;
+}
+span.switcher.switcher-1 input:checked + label {
+    left: 10px;
+    right: 100px;
+    background: #1e1e1e;
+    transition: left 0.5s, right 0.4s 0.2s;
+}
+span.switcher.switcher-1 input:not(:checked) {
+    background: #1e1e1e;
+    transition: background 0.5s -0.1s;
+}
+span.switcher.switcher-1 input:not(:checked):before {
+    color: #ccc;
+    transition: color 0.5s;
+}
+span.switcher.switcher-1 input:not(:checked):after {
+    color: #1e1e1e;
+    transition: color 0.5s 0.2s;
+}
+span.switcher.switcher-1 input:not(:checked) + label {
+    left: 100px;
+    right: 10px;
+    background: #fff;
+    transition: left 0.4s 0.2s, right 0.5s, background 0.35s -0.1s;
+}
+@keyframes turn-on {
+    0% {
+        left: 100%;
+   }
+    100% {
+        left: 0%;
+   }
+}
+@keyframes turn-off {
+    0% {
+        right: 100%;
+   }
+    100% {
+        right: 0%;
+   }
+}
+
+/****Input range******/
+input[type="range"] {
+    outline: 0;
+    border: 0;
+    border-radius: 30px;
+    max-width: 100%;
+    margin: 24px 0 16px;
+    transition: box-shadow 0.2s ease-in-out;
+}
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+    input[type="range"] {
+        overflow: hidden;
+        height: 35px;
+        -webkit-appearance: none;
+        background-color: #ddd;
+    }
+    input[type="range"]::-webkit-slider-runnable-track {
+        height: 40px;
+        -webkit-appearance: none;
+        color: #444;
+        transition: box-shadow 0.2s ease-in-out;
+    }
+    input[type="range"]::-webkit-slider-thumb {
+        width: 40px;
+        -webkit-appearance: none;
+        height: 40px;
+        cursor: ew-resize;
+        background: #fff;
+        box-shadow: -340px 0 0 320px #1597ff, inset 0 0 0 40px #1597ff;
+        border-radius: 50%;
+        transition: box-shadow 0.2s ease-in-out;
+        position: relative;
+    }
+    input[type="range"]:active::-webkit-slider-thumb {
+        background: #fff;
+        box-shadow: -340px 0 0 320px #1597ff, inset 0 0 0 3px #1597ff;
+    }
+}
+ input[type="range"]::-moz-range-progress {
+    background-color: #43e5f7;
+}
+ input[type="range"]::-moz-range-track {
+    background-color: #9a905d;
+}
+ input[type="range"]::-ms-fill-lower {
+    background-color: #43e5f7;
+}
+ input[type="range"]::-ms-fill-upper {
+    background-color: #9a905d;
+}
