route to create account and buttons in landing page added

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1102,3 +1102,56 @@ input[type="range"] {
     -webkit-transform: rotate(40deg);
             transform: rotate(40deg);
 }
+
+/****Entrar e Criar buttons******/
+.criar-btn {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    background: #1319EA;
+    color: #fff;
+    cursor: pointer;
+    font-size: 1.2em;
+    padding: 0.5rem;
+    border: 0;
+    transition: all 0.5s;
+    border-radius: 10px;
+    width: auto;
+    position: relative;
+    letter-spacing: 1px;
+    margin-right: 20px;
+}
+
+.criar-btn:hover {
+    background: #fff;
+    color: #1d1d1d;
+    transition: all 0.8s;
+    box-shadow: 0px 6px 15px #fff;
+}
+
+@media (max-width: 500px) {
+    .criar-btn{
+        display: none;
+    }
+}
+
+.entrar-btn {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    background: rgb(255, 255, 255);
+    color: #1d1d1d;
+    cursor: pointer;
+    font-size: 1.2em;
+    padding: 0.5rem;
+    border: 0;
+    transition: all 0.5s;
+    border-radius: 10px;
+    width: auto;
+    position: relative;
+    letter-spacing: 1px;
+    min-width: 50px;
+}
+
+.entrar-btn:hover {
+    background: #1319EA;
+    transition: all 0.8s;
+    box-shadow: 0px 6px 15px #00f;
+    color: #fff;
+}
