--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1136,3 +1136,23 @@ input[type="range"] {
     box-shadow: 0px 6px 15px #2FA4E7;
     color: #46AEF7;
 }
+
+/****book******/
+.book-h4 { 
+    font-family: 'Raleway',sans-serif; 
+    font-size: 30px; 
+    font-weight: 600;  
+    margin: 0 0 24px; 
+    text-align: center; 
+    text-transform: uppercase; 
+    border-bottom: 3px double white;
+}
+
+.book-p {  
+    font-family: 'Raleway',sans-serif; 
+    font-size: 18px; 
+    font-weight: 500; 
+    margin: 0 0 20px;
+    text-align: justify;
+    letter-spacing: 0.5px;
+}
